// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overlay snapshots should match snapshot when type="text" 1`] = `
.c0 {
  background-color: #f9f9fd;
  border: 1px solid #dcdce7;
  border-radius: 3px;
  color: #2e2e34;
  font-size: 14px;
  font-weight: 400;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: normal;
  outline: none;
  padding: 10px 20px;
}

.c0:hover {
  background-color: #f0f0f7;
}

.c0:disabled {
  background-color: #f9f9fd;
  color: #8e929b;
  cursor: not-allowed;
}

.c0:focus {
  background-color: #ffffff;
  border-color: #6124e2;
}

.c0::-webkit-input-placeholder {
  color: #8e929b;
}

.c0::-moz-placeholder {
  color: #8e929b;
}

.c0:-ms-input-placeholder {
  color: #8e929b;
}

.c0::placeholder {
  color: #8e929b;
}

<TextField
  className=""
  placeholderText=""
  type="text"
  value=""
>
  <StyledTextComponents__StyledTextField
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    type="text"
    value=""
  >
    <input
      className="c0"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      type="text"
      value=""
    />
  </StyledTextComponents__StyledTextField>
</TextField>
`;

exports[`overlay snapshots should match snapshot when type="textarea" 1`] = `
.c0 {
  background-color: #f9f9fd;
  border: 1px solid #dcdce7;
  border-radius: 3px;
  color: #2e2e34;
  font-size: 14px;
  font-weight: 400;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: normal;
  outline: none;
  padding: 10px 20px;
}

.c0:hover {
  background-color: #f0f0f7;
}

.c0:disabled {
  background-color: #f9f9fd;
  color: #8e929b;
  cursor: not-allowed;
}

.c0:focus {
  background-color: #ffffff;
  border-color: #6124e2;
}

.c0::-webkit-input-placeholder {
  color: #8e929b;
}

.c0::-moz-placeholder {
  color: #8e929b;
}

.c0:-ms-input-placeholder {
  color: #8e929b;
}

.c0::placeholder {
  color: #8e929b;
}

<TextField
  className=""
  placeholderText=""
  type="textarea"
  value=""
>
  <StyledTextComponents__StyledTextAreaField
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder=""
    value=""
  >
    <textarea
      className="c0"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      value=""
    />
  </StyledTextComponents__StyledTextAreaField>
</TextField>
`;
